ES6未対応ブラウザへの表示文

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 </head>
 <body style="color:white;background:black;">
 <div id="container" style="position:relative;">
-	<canvas id="canvasMain" style="position:absolute;left:0;top:0;z-index:0;background-color:black;"></canvas> <canvas id="canvasCur" style="position:absolute;left:0;top:0;z-index:1;"></canvas>
-	<canvas id="canvasMsg" style="position:absolute;left:0;top:0;z-index:2;"></canvas>
-	<canvas id="canvasStats" style="position:absolute;left:0;top:0;z-index:3;"></canvas>
-	<canvas id="canvasMap" style="position:absolute;left:0;top:0;z-index:4;"></canvas>
-	<canvas id="canvasInv" style="position:absolute;left:0;top:0;z-index:5;"></canvas>
+※ お使いのブラウザではこのゲームは動作しません。chromeの最新版を推奨します。
 </div>
 <div>
 	<p>'?'を押すとコマンド一覧が表示されます。</p>
