ゲーム説明に素材と宝石を追記

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 			<p>白紙の充填書に巻物を1種類合成すると、その巻物に対応した充填書が作成されます。</p>
 			<p>巻物と同じように使用でき、その毎に充填数を消費します。</p>
 			<p>対応する充填書と巻物、または充填書同士を合成することで充填数が増加しますが、重量が増えるなどのペナルティはありません。</p>
+		<li>素材</li>
+			<p>名前に修飾詞のついた敵を倒すと、その敵に対応した素材を落とすことがあります。</p>
+			<p>装備品に埋め込み数の空きがあり、同じ種類の素材であれば埋め込むことができます。</p>
+		<li>宝石</li>
+			<p>素材とは違い、空きがあれば、どんな装備品にも埋め込めます。</p>
 		<li>エラー</li>
 			<p>ゲーム内でエラーが発生すると、それ以後はデータが記録されません。</p>
 			<p>ブラウザを再読み込みすると、自動記録や'ctrl+s'で記録したデータまで巻き戻ります。</p>
