音声ファイルの音量調整、SE追加、kill_boss.wav削除、リンク追加

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<p>ブラウザを再読み込みすると、自動記録や'ctrl+s'で記録したデータまで巻き戻ります。</p>
 	</ul>
 	<p>ソースコード	<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
+	<p>BGM・SE <a href="http://ringil-music.com" target="_blank">Ringil(ダウンロード)</a></p>
 </div>
 <script src="scripts/main.js"></script>
 </body>
