--- a/index.html
+++ b/index.html
@@ -1,53 +1,77 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Death and Birth</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="ダンテの神曲やギリシャ神話を題材にした、開発中のローグライク・ブラウザゲーム">
+	<title>Death and Birth</title>
+	<link href="css/main.css?1" rel="stylesheet">
 </head>
-<body style="color:white;background:black;">
-<div id="container" style="position:relative;">
-※ お使いのブラウザではこのゲームは動作しません。chromeの最新版を推奨します。
-</div>
-<div>
-	<p>'?'を押すとコマンド一覧が表示されます。</p>
-	<ul>
-		<li>攻撃</li>
-			<p>敵に対して方向キーを押すとそれが攻撃動作となります。</p>
-			<p>敵を攻撃するとその敵を標的とし右下に枠が表示されます。</p>
-			<p>'x'コマンドでその敵にカーソルを合わせ、't'を押すことでも標的となり、'r'を押すと標的を解除します。</p>
-		<li>ダイス</li>
-			<p>武器やスキルに'2d6'などの表示がありますが、これは1から6まで書かれた6面のダイスを2個振るという操作の略記です。</p>
-			<p>攻撃する毎にこの操作を行い、その出目の合計値を、与えるダメージの基礎値として決定しています。</p>
-			<p>Avg(average)の表記はこの操作の期待値です。</p>
-		<li>アイテム</li>
-			<p>'p'コマンドより、画面下部に表示される枠に詰めたアイテムは、その枠に対応する数字を押すことで使用します。</p>
-			<p>この時、詰めたアイテムが矢弾で、それに対応する射出武器を装備していれば、標的とした敵を攻撃し、標的が設定されていなければ自動で近くの敵に対して攻撃します。</p>
-		<li>スキル</li>
-			<p>スキルポイントを消費して魔法書から取得し、そのスキルが書かれた魔法書を所持していることで使用できます。</p>
-			<p>'a'コマンドより設定したスキルは、その対応するキー(F1-F12)を押すことで使用します。</p>
-			<p>メインに設定したスキルは、'alt'を押しながら方向キーを押すことで、その方向に対してスキルを使用します。</p>
-		<li>射出武器</li>
-			<p>スキルと同様に、射出武器を装備していれば、'alt'を押しながら方向キーを押すことで、その方向に対して矢弾を発射します。</p>
-			<p>メインにスキルが設定されてあれば、スキルの使用が優先されます。</p>
-		<li>錬金術</li>
-			<p>レシピを所持していることでアイテム合成ができます。</p>
-			<p>合成の種類は'I'コマンドからレシピを選択することで一覧が確認できます。</p>
-		<li>充填書</li>
-			<p>白紙の充填書に巻物を1種類合成すると、その巻物に対応した充填書が作成されます。</p>
-			<p>巻物と同じように使用でき、その毎に充填数を消費します。</p>
-			<p>対応する充填書と巻物、または充填書同士を合成することで充填数が増加しますが、重量が増えるなどのペナルティはありません。</p>
-		<li>素材</li>
-			<p>名前に修飾詞のついた敵を倒すと、その敵に対応した素材を落とすことがあります。</p>
-			<p>装備品に埋め込み数の空きがあり、同じ種類の素材であれば埋め込むことができます。</p>
-		<li>宝石</li>
-			<p>素材とは違い、空きがあれば、どんな装備品にも埋め込めます。</p>
-		<li>エラー</li>
-			<p>ゲーム内でエラーが発生すると、それ以後はデータが記録されません。</p>
-			<p>ブラウザを再読み込みすると、自動記録や'ctrl+s'で記録したデータまで巻き戻ります。</p>
-	</ul>
-	<p>ソースコード	<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
-	<p>BGM・SE <a href="http://ringil-music.com" target="_blank">Ringil(ダウンロード)</a></p>
-</div>
-<script src="scripts/main.js"></script>
+<body>
+	<main>
+		<div id="container">
+			※ お使いのブラウザではこのゲームは動作しません。chromeの最新版を推奨します。
+		</div>
+		<article>
+			<p>'?'を押すとコマンド一覧が表示されます。</p>
+			<h4>攻撃</h4>
+			<ul>
+				<li>敵に対して方向キーを押すとそれが攻撃動作となります。</li>
+				<li>敵を攻撃するとその敵を標的とし右下に枠が表示されます。</li>
+				<li>'x'コマンドでその敵にカーソルを合わせ、't'を押すことでも標的となり、'r'を押すと標的を解除します。</li>
+			</ul>
+			<h4>ダイス</h4>
+			<ul>
+				<li>武器やスキルに'2d6'などの表示がありますが、これは1から6まで書かれた6面のダイスを2個振るという操作の略記です。</>
+				<li>攻撃する毎にこの操作を行い、その出目の合計値を、与えるダメージの基礎値として決定しています。</li>
+				<li>Avg(average)の表記はこの操作の期待値です。</li>
+			</ul>
+			<h4>アイテム</h4>
+			<ul>
+				<li>'p'コマンドより、画面下部に表示される枠に詰めたアイテムは、その枠に対応する数字を押すことで使用します。</li>
+				<li>この時、詰めたアイテムが矢弾で、それに対応する射出武器を装備していれば、標的とした敵を攻撃し、標的が設定されていなければ自動で近くの敵に対して攻撃します。</li>
+			</ul>
+			<h4>スキル</h4>
+			<ul>
+				<li>スキルポイントを消費して魔法書から取得し、そのスキルが書かれた魔法書を所持していることで使用できます。</li>
+				<li>'a'コマンドより設定したスキルは、その対応するキー(F1-F12)を押すことで使用します。</li>
+				<li>メインに設定したスキルは、'alt'を押しながら方向キーを押すことで、その方向に対してスキルを使用します。</li>
+			</ul>
+			<h4>射出武器</h4>
+			<ul>
+				<li>スキルと同様に、射出武器を装備していれば、'alt'を押しながら方向キーを押すことで、その方向に対して矢弾を発射します。</li>
+				<li>メインにスキルが設定されてあれば、スキルの使用が優先されます。</li>
+			</ul>
+			<h4>錬金術</h4>
+			<ul>
+				<li>レシピを所持していることでアイテム合成ができます。</li>
+				<li>合成の種類は'I'コマンドからレシピを選択することで一覧が確認できます。</li>
+			</ul>
+			<h4>充填書</h4>
+			<ul>
+				<li>白紙の充填書に巻物を1種類合成すると、その巻物に対応した充填書が作成されます。</li>
+				<li>巻物と同じように使用でき、その毎に充填数を消費します。</li>
+				<li>対応する充填書と巻物、または充填書同士を合成することで充填数が増加しますが、重量が増えるなどのペナルティはありません。</li>
+			</ul>
+			<h4>素材</h4>
+			<ul>
+				<li>名前に修飾詞のついた敵を倒すと、その敵に対応した素材を落とすことがあります。</li>
+				<li>装備品に埋め込み数の空きがあり、同じ種類の素材であれば埋め込むことができます。</li>
+			</ul>
+			<h4>宝石</h4>
+			<ul>
+				<li>素材とは違い、空きがあれば、どんな装備品にも埋め込めます。</li>
+			</ul>
+			<h4>エラー</h4>
+			<ul>
+				<li>ゲーム内でエラーが発生すると、それ以後はデータが記録されません。</li>
+				<li>ブラウザを再読み込みすると、自動記録や'ctrl+s'で記録したデータまで巻き戻ります。</li>
+				<li>このゲームのバージョン更新時に、お使いのブラウザで頻繁にエラーが発生する場合、キャッシュやクッキー等のサイトデータを消去すると、解消される場合があります。</li>
+			</ul>
+			<p>ソースコード	<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
+			<p>BGM・SE <a href="http://ringil-music.com" target="_blank">Ringil(ダウンロード)</a></p>
+		</article>
+	</main>
+	<footer><p>(c) Death and Birth 2017</p></footer>
+	<script src="scripts/main.js"></script>
 </body>
 </html>
