引数の整理、変数udを削除

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="ダンテの神曲やギリシャ神話を題材にした、開発中のローグライク・ブラウザゲーム">
 	<title>Death and Birth</title>
-	<link href="css/main.css?1" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 	<main>
