--- a/index.html
+++ b/index.html
@@ -72,6 +72,35 @@
 		</article>
 	</main>
 	<footer><p>(c) Death and Birth 2017</p></footer>
-	<script src="scripts/main.js"></script>
+	<script src="scripts/constants.js"></script>
+	<script src="scripts/display.js"></script>
+	<script src="scripts/option.js"></script>
+	<script src="scripts/utility.js"></script>
+	<script src="scripts/shop.js"></script>
+	<script src="scripts/message.js"></script>
+	<script src="scripts/skill.js"></script>
+	<script src="scripts/investigation.js"></script>
+	<script src="scripts/data.js"></script>
+	<script src="scripts/audio.js"></script>
+	<script src="scripts/pathfinding.js"></script>
+	<script src="scripts/map.js"></script>
+	<script src="scripts/queue.js"></script>
+	<script src="scripts/location.js"></script>
+	<script src="scripts/thing.js"></script>
+	<script src="scripts/portal.js"></script>
+	<script src="scripts/trap.js"></script>
+	<script src="scripts/staircase.js"></script>
+	<script src="scripts/dungeon.js"></script>
+	<script src="scripts/town.js"></script>
+	<script src="scripts/inventory.js"></script>
+	<script src="scripts/material.js"></script>
+	<script src="scripts/item.js"></script>
+	<script src="scripts/fighter.js"></script>
+	<script src="scripts/rogue.js"></script>
+	<script src="scripts/enemy.js"></script>
+	<script src="scripts/creation.js"></script>
+	<script src="scripts/game.js"></script>
+	<script src="scripts/input.js"></script>
+	<script src="scripts/load.js"></script>
 </body>
 </html>
