Canvasの中央揃え・その他CSS調整・SE追加

--- a/index.html
+++ b/index.html
@@ -13,62 +13,62 @@
 		</div>
 		<article>
 			<p>'?'を押すとコマンド一覧が表示されます。</p>
-			<h4>攻撃</h4>
+			<h2>攻撃</h2>
 			<ul>
 				<li>敵に対して方向キーを押すとそれが攻撃動作となります。</li>
 				<li>敵を攻撃するとその敵を標的とし右下に枠が表示されます。</li>
 				<li>'x'コマンドでその敵にカーソルを合わせ、't'を押すことでも標的となり、'r'を押すと標的を解除します。</li>
 			</ul>
-			<h4>ダイス</h4>
+			<h2>ダイス</h2>
 			<ul>
 				<li>武器やスキルに'2d6'などの表示がありますが、これは1から6まで書かれた6面のダイスを2個振るという操作の略記です。</>
 				<li>攻撃する毎にこの操作を行い、その出目の合計値を、与えるダメージの基礎値として決定しています。</li>
 				<li>Avg(average)の表記はこの操作の期待値です。</li>
 			</ul>
-			<h4>アイテム</h4>
+			<h2>アイテム</h2>
 			<ul>
 				<li>'p'コマンドより、画面下部に表示される枠に詰めたアイテムは、その枠に対応する数字を押すことで使用します。</li>
 				<li>この時、詰めたアイテムが矢弾で、それに対応する射出武器を装備していれば、標的とした敵を攻撃し、標的が設定されていなければ自動で近くの敵に対して攻撃します。</li>
 			</ul>
-			<h4>スキル</h4>
+			<h2>スキル</h2>
 			<ul>
 				<li>スキルポイントを消費して魔法書から取得し、そのスキルが書かれた魔法書を所持していることで使用できます。</li>
 				<li>'a'コマンドより設定したスキルは、その対応するキー(F1-F12)を押すことで使用します。</li>
 				<li>メインに設定したスキルは、'alt'を押しながら方向キーを押すことで、その方向に対してスキルを使用します。</li>
 			</ul>
-			<h4>射出武器</h4>
+			<h2>射出武器</h2>
 			<ul>
 				<li>スキルと同様に、射出武器を装備していれば、'alt'を押しながら方向キーを押すことで、その方向に対して矢弾を発射します。</li>
 				<li>メインにスキルが設定されてあれば、スキルの使用が優先されます。</li>
 			</ul>
-			<h4>錬金術</h4>
+			<h2>錬金術</h2>
 			<ul>
 				<li>レシピを所持していることでアイテム合成ができます。</li>
 				<li>合成の種類は'I'コマンドからレシピを選択することで一覧が確認できます。</li>
 			</ul>
-			<h4>充填書</h4>
+			<h2>充填書</h2>
 			<ul>
 				<li>白紙の充填書に巻物を1種類合成すると、その巻物に対応した充填書が作成されます。</li>
 				<li>巻物と同じように使用でき、その毎に充填数を消費します。</li>
 				<li>対応する充填書と巻物、または充填書同士を合成することで充填数が増加しますが、重量が増えるなどのペナルティはありません。</li>
 			</ul>
-			<h4>素材</h4>
+			<h2>素材</h2>
 			<ul>
 				<li>名前に修飾詞のついた敵を倒すと、その敵に対応した素材を落とすことがあります。</li>
 				<li>装備品に埋め込み数の空きがあり、同じ種類の素材であれば埋め込むことができます。</li>
 			</ul>
-			<h4>宝石</h4>
+			<h2>宝石</h2>
 			<ul>
 				<li>素材とは違い、空きがあれば、どんな装備品にも埋め込めます。</li>
 			</ul>
-			<h4>エラー</h4>
+			<h2>エラー</h2>
 			<ul>
 				<li>ゲーム内でエラーが発生すると、それ以後はデータが記録されません。</li>
 				<li>ブラウザを再読み込みすると、自動記録や'ctrl+s'で記録したデータまで巻き戻ります。</li>
 				<li>このゲームのバージョン更新時に、お使いのブラウザで頻繁にエラーが発生する場合、キャッシュやクッキー等のサイトデータを消去すると、解消される場合があります。</li>
 			</ul>
-			<p>ソースコード	<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
-			<p>BGM・SE <a href="http://ringil-music.com" target="_blank">Ringil(ダウンロード)</a></p>
+			<p><span>ソースコード</span>&ensp;<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
+			<p><span>BGM・SE</span>&ensp;<a href="https://ringil-music.com" target="_blank">Ringil</a></p>
 		</article>
 	</main>
 	<footer><p>(c) Death and Birth 2017</p></footer>
