Entrance関連のオブジェクトをクラス化
shop.jsをentrance.jsに変更
stashのlistをmap.stashListに保持
portalをmap.portalに保持

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 	<script src="scripts/display.js"></script>
 	<script src="scripts/option.js"></script>
 	<script src="scripts/utility.js"></script>
-	<script src="scripts/shop.js"></script>
+	<script src="scripts/thing.js"></script>
+	<script src="scripts/entrance.js"></script>
 	<script src="scripts/message.js"></script>
 	<script src="scripts/skill.js"></script>
 	<script src="scripts/investigation.js"></script>
@@ -86,7 +87,6 @@
 	<script src="scripts/map.js"></script>
 	<script src="scripts/queue.js"></script>
 	<script src="scripts/location.js"></script>
-	<script src="scripts/thing.js"></script>
 	<script src="scripts/portal.js"></script>
 	<script src="scripts/trap.js"></script>
 	<script src="scripts/staircase.js"></script>
