色関連の変数をオブジェクト化
constants.jsからcolor.jsに分離

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 	</main>
 	<footer><p>(c) Death and Birth 2018</p></footer>
 	<script src="scripts/constants.js"></script>
+	<script src="scripts/color.js"></script>
 	<script src="scripts/display.js"></script>
 	<script src="scripts/option.js"></script>
 	<script src="scripts/utility.js"></script>
