--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 	<script src="scripts/enemy.js"></script>
 	<script src="scripts/creation.js"></script>
 	<script src="scripts/game.js"></script>
+	<script src="scripts/help.js"></script>
 	<script src="scripts/input.js"></script>
 	<script src="scripts/load.js"></script>
 </body>
