ステータス関連の定数を文字列に変更
map.jsからstatistics.jsに分離
DataにfixStats()を追加
statisticsにgetRndTerm()を追加

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 	<script src="scripts/audio.js"></script>
 	<script src="scripts/pathfinding.js"></script>
 	<script src="scripts/map.js"></script>
+	<script src="scripts/statistics.js"></script>
 	<script src="scripts/queue.js"></script>
 	<script src="scripts/location.js"></script>
 	<script src="scripts/portal.js"></script>
