ファイルの結合

--- a/debug.html
+++ b/debug.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="ダンテの神曲やギリシャ神話を題材にした、開発中のローグライク・ブラウザゲーム">
-	<title>Death and Birth</title>
+	<title>Death and Birth | デスアンドバース</title>
 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -69,6 +69,7 @@
 			</ul>
 			<p><span>ソースコード</span>&ensp;<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
 			<p><span>BGM・SE</span>&ensp;<a href="https://ringil-music.com" target="_blank">Ringil</a></p>
+			<p>更新内容の詳細は<a href="http://ringil-blog.info/" target="_blank">ブログ</a>に書いています。</p>
 		</article>
 	</main>
 	<footer><p>(c) Death and Birth 2018</p></footer>
