--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<li>名前に修飾詞のついた敵を倒すと、その敵に対応した素材を落とすことがあります。</li>
 				<li>装備品に埋め込み数の空きがあり、同じ種類の素材であれば埋め込むことができます。</li>
 			</ul>
-			<h2>宝石</h2>
+			<h2><s>宝石</s><small style="color: yellow"> 宝石の代わりにジュエルを導入しました。（v0.006）</small></h2>
 			<ul>
 				<li>素材とは違い、空きがあれば、どんな装備品にも埋め込めます。</li>
 			</ul>
