バージョン変更・その他
バージョン: 0.009
SE追加: 稲妻・分解・鼓舞
ブラウザ読み込み時にBGMを再生しないように変更
optionにローグ型移動を追加
lvl上昇時のMP回復がskillによる消費より後に実行されるよう修正

--- a/debug.html
+++ b/debug.html
@@ -21,7 +21,7 @@
 			</ul>
 			<h2>ダイス</h2>
 			<ul>
-				<li>武器やスキルに'2d6'などの表示がありますが、これは1から6まで書かれた6面のダイスを2個振るという操作の略記です。</>
+				<li>武器やスキルに'2d6'などの表示がありますが、これは1から6まで書かれた6面のダイスを2個振るという操作の略記です。</li>
 				<li>攻撃する毎にこの操作を行い、その出目の合計値を、与えるダメージの基礎値として決定しています。</li>
 				<li>Avg(average)の表記はこの操作の期待値です。</li>
 			</ul>
@@ -70,6 +70,7 @@
 			<p><span>ソースコード</span>&ensp;<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
 			<p><span>BGM・SE</span>&ensp;<a href="https://ringil-music.com" target="_blank">Ringil</a></p>
 			<p>更新内容の詳細は<a href="http://ringil-blog.info/" target="_blank">ブログ</a>に書いています。</p>
+			<small>※ブラウザ読み込み時にタイトル曲を再生しないようにしました。（v0.009）</small>
 		</article>
 	</main>
 	<footer><p>(c) Death and Birth 2018</p></footer>
