ファイルの統合

--- a/debug.html
+++ b/debug.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="ダンテの神曲やギリシャ神話を題材にした、開発中のローグライク・ブラウザゲーム">
+	<meta name="robots" content="noindex, nofollow">
 	<title>Death and Birth | デスアンドバース</title>
 	<link href="css/main.css" rel="stylesheet">
 </head>
