ファイルの結合

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 		<small>※ブラウザ読み込み時にタイトル曲を再生しないようにしました。（v0.009）</small>
 	</main>
 	<footer><p>(c) Death and Birth 2018</p></footer>
-	<script src="site.js"></script>
-	<script src="main.js"></script>
+	<script src="site.js?0630"></script>
+	<script src="main.js?0630"></script>
 </body>
 </html>
