--- a/debug.html
+++ b/debug.html
@@ -5,10 +5,13 @@
 	<meta name="robots" content="noindex, nofollow">
 	<title>Death and Birth | デスアンドバース</title>
 	<link href="css/main.css" rel="stylesheet">
+	<link href="css/game.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
 </head>
 <body>
 	<main>
+
+		<!-- Canvas -->
 		<div id="canvas-container">
 			<span id="msg-err">※ お使いのブラウザではこのゲームは動作しません。chromeの最新版を推奨します。</span>
 			<canvas id="canvas-main"></canvas>
@@ -18,10 +21,561 @@
 			<canvas id="canvas-map"></canvas>
 			<canvas id="canvas-inv"></canvas>
 		</div>
+
+		<!-- DOM -->
+		<div class="game-container">
+
+			<!-- Message Fixed -->
+			<p
+				id="message-fixed"
+				:title="msg"
+			>{{ msg }}</p>
+
+			<!-- UI -->
+			<div id="ui-container">
+
+				<!-- Main Map -->
+				<div id="map-main-container">
+					<grid-map
+						:coords="coords"
+						:rogue="rogue"
+					></grid-map>
+				</div>
+
+
+				<!-- Mini Map -->
+				<div
+					id="map-mini-container"
+					v-show="flag.minimap"
+					style="z-index: 10"
+				>
+					<grid-map
+						:coords="coords"
+						:rogue="rogue"
+					></grid-map>
+				</div>
+
+				<!-- Message -->
+				<div id="message-container">
+					<div id="msg-temp-container">
+						<ul>
+							<li
+								v-for="msg in msgs"
+							>{{ msg.text + (msg.count > 1 ? ' (x' + msg.count + ')' : '') }}</li>
+						</ul>
+					</div>
+				</div>
+				
+				<!-- Condition -->
+				<div id="condition-container">
+					<ul>
+						<li
+							v-if="rogue.hunger >= 800"
+							v-bind:style="{ color: colorList.lime }"
+						>{{ vueList.isEnglish ? 'full' : '満腹'}}</li>
+						<li
+							v-else-if="rogue.hunger > 0 && rogue.hunger <= 200"
+							v-bind:style="{ color: colorList.yellow }"
+						>{{ vueList.isEnglish ? 'hungry' : '空腹'}}</li>
+						<li
+							v-else-if="rogue.hunger === 0"
+							v-bind:style="{ color: colorList.red }"
+						>{{ vueList.isEnglish ? 'starved' : '飢餓'}}</li>
+						<li
+							v-if="rogue.poisoned"
+							v-bind:style="{ color: colorList.poison }"
+						>{{ vueList.isEnglish ? 'poisoned' : '毒'}}</li>
+						<li
+							v-if="rogue.confused"
+							v-bind:style="{ color: colorList.yellow }"
+						>{{ vueList.isEnglish ? 'confused' : '混乱'}}</li>
+						<li
+							v-if="rogue.paralyzed"
+							v-bind:style="{ color: colorList.orange }"
+						>{{ vueList.isEnglish ? 'paralyzed' : '麻痺'}}</li>
+						<li
+							v-if="rogue.sleeping > 0"
+							v-bind:style="{ color: colorList.royalblue }"
+						>{{ vueList.isEnglish ? 'sleeping' : '睡眠'}}</li>
+						<li
+							v-if="rogue.blinded"
+							v-bind:style="{ color: colorList.gray }"
+						>{{ vueList.isEnglish ? 'blinded' : '盲目'}}</li>
+						<li
+							v-if="rogue.infected"
+							v-bind:style="{ color: colorList.infection }"
+						>{{ vueList.isEnglish ? 'infected' : '感染'}}</li>
+						<li
+							v-if="rogue.hallucinated"
+							v-bind:style="{ color: colorList.purple }"
+						>{{ vueList.isEnglish ? 'hallucinated' : '幻覚'}}</li>
+						<li
+							v-if="rogue.canceled"
+							v-bind:style="{ color: colorList.white }"
+						>{{ vueList.isEnglish ? 'canceled' : '封印'}}</li>
+						<li
+							v-if="rogue.seeInvisible"
+							v-bind:style="{
+								color: colorList.light,
+								'text-shadow': '1px 1px 0 ' + colorList.light
+							}"
+						>{{ vueList.isEnglish ? 'see invisible' : '透視'}}</li>
+						<li
+							v-if="rogue.invisibility"
+							v-bind:style="{
+								color: colorList.light,
+								'text-shadow': '1px 1px 0 ' + colorList.light
+							}"
+						>{{ vueList.isEnglish ? 'invisible' : '透明'}}</li>
+						<li
+							v-if="rogue.ecco"
+							v-bind:style="{ color: colorList.air }"
+						>{{ vueList.isEnglish ? 'ecco' : 'エコー'}}</li>
+						<!-- TODO -->
+						<li
+							v-if="rogue.enchantSelfDur"
+							v-bind:style="{ color: colorList.earth }"
+						>{{ vueList.isEnglish ? 'enchant self' : '自己強化'}}</li>
+						<li
+							v-if="rogue.venomDur"
+							v-bind:style="{ color: colorList.poison }"
+						>{{ vueList.isEnglish ? 'venom hands' : '猛毒の手'}}</li>
+						<li
+							v-if="rogue.confusing"
+							v-bind:style="{ color: colorList.poison }"
+						>{{ vueList.isEnglish ? 'confusing hands' : '混乱の手'}}</li>
+					</ul>
+				</div>
+
+				<!-- Enemy Bar -->
+				<div id="enemy-bar-container">
+					<div 
+						v-if="enemy"
+						class="enemy-bar-box"
+					>
+						<p
+							v-bind:class="{ 
+								'unique-color': enemy.stroke,
+							}"
+							v-bind:style="{ 
+								color: enemy.cursed ? colorList.red : '',
+								'text-shadow': enemy.shadow ? '1px 1px 0 ' + enemy.shadow : ''
+							}"
+						>{{ 'Lv' + enemy.lvl + ' ' + name }}</p>
+						<div class="enemy-bar">
+							<span 
+								class="hp"
+								v-bind:style="{ 
+									width: (enemy.hp < 0 ? 0 : enemy.hp / enemy.hpMax * 100) + '%',
+									'background-color': (
+										enemy.sleeping ? colorList.royalblue :
+										enemy.paralyzed ? colorList.orange :
+										enemy.confused ? colorList.yellow :
+										enemy.blinded ? colorList.gray :
+										enemy.hallucinated ? colorList.purple :
+										enemy.canceled ? colorList.white :
+										enemy.infected ? colorList.infection :
+										enemy.poisoned ? colorList.poison :
+										''
+									)
+								}"
+							></span>
+						</div>
+					</div>
+					<span
+						v-if="rogue.ce"
+						class="enemy-icon"
+						v-bind:class="{ 
+							'unique-color': rogue.ce.stroke,
+						}"
+						v-bind:style="{ 
+							color: rogue.ce.color,
+							'text-shadow': rogue.ce.shadow ? '1px 1px 0 ' + rogue.ce.shadow : ''
+						}"
+					>{{ rogue.ce.symbol }}</span>
+				</div>
+
+				<!-- Menu -->
+				<div id="menu-container">
+
+					<inventory
+						id="inventory-right"
+						class="right"
+						:inv="inv"
+					></inventory>
+
+					<inventory
+						id="inventory-left"
+						class="left"
+						:inv="inv"
+					></inventory>
+
+					<inventory
+						id="stats" 
+						class="left"
+						:inv="inv"
+					></inventory>
+
+					<div
+						v-show="inv.show"
+						id="recipe" 
+						class="inventory middle"
+					>
+						<ul class="item-list">
+							<li v-for="item in inv.items">
+								<ul class="item-prop-list">
+									<li class="item-name">{{ item.name }}</li>
+									<li class="item-cost">{{ item.cost }}</li>
+									<li class="item-recipe">{{ item.recipe }}</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+
+					<equipment
+						id="equipment"
+						:inv="inv"
+					></equipment>
+
+					<skill
+						id="skill"
+						class="right"
+						:inv="inv"
+					></skill>
+
+					<skill
+						id="bookmark"
+						class="left"
+						:inv="inv"
+					></skill>
+
+					<div
+						v-show="flag.message"
+						id="message-list-container"
+						class="inventory middle"
+					>
+						<ul id="message-prev-list"
+							class="message-list"
+						>
+							<li v-for="msg in message.list">{{ msg.text + (msg.count > 1 ? ` (x${msg.count})` : '') }}</li>
+						</ul>
+						<inv-bottom
+							:left="message.total"
+						></inv-bottom>
+					</div>
+
+					<help
+						v-show="flag.help"
+						id="help"
+						:help="help"
+						:rogue="rogue"
+						:vue-list="vueList"
+					></help>
+
+					<div
+						v-show="inv.show"
+						id="investigation-item"
+						class="inventory investigation"
+					>
+						<ul class="item-prop-list">
+							<item-symbol :item="inv.obj"></item-symbol>
+							<item-name :item="inv.obj"></item-name>
+						</ul>
+						<p class="description">{{ inv.desc }}</p>
+						<ul class="base-prop-list">
+							<li v-for="prop in inv.basePropList">
+								<ul
+									class="base-prop"
+									:style="{ 
+										'text-shadow': prop && prop.shadow ? '1px 1px 0 ' + prop.shadow : ''
+									}"
+								>
+									<li>{{ prop.text }}</li>
+									<li>{{ prop.value }}</li>
+								</ul>
+							</li>
+						</ul>
+						<ul class="embedded-list">
+							<li v-for="item in inv.embeddedList">
+								<ul class="embedded-prop">
+									<item-symbol :item="item"></item-symbol>
+									<item-name :item="item"></item-name>
+								</ul>
+							</li>
+						</ul>
+						<ul class="mod-prop-list">
+							<li v-for="prop in inv.modPropList">
+								<ul class="mod-prop buff">
+									<li>{{ prop.text }}</li>
+									<li>{{ prop.value }}</li>
+								</ul>
+							</li>
+						</ul>
+						<ul class="mod-parts-list">
+							<li v-for="(props, key) in inv.modPartsList">
+								<ul class="mod-parts-prop-list">
+									<li class="mod-parts">{{ key }}</li>
+									<li>
+										<ul
+											v-for="prop in props"
+											class="mod-prop buff"
+										>
+											<li>{{ prop.text }}</li>
+											<li>{{ prop.value }}</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+
+					<div
+						v-show="inv.show"
+						id="investigation-fighter"
+						class="inventory investigation"
+					>
+						<ul class="item-prop-list">
+							<item-symbol :item="inv.obj"></item-symbol>
+							<item-name :item="inv.obj"></item-name>
+						</ul>
+						<p class="description">{{ inv.desc }}</p>
+						<ul
+							id="fighter-prop-list"
+							class="base-prop-list"
+						>
+							<li v-for="prop in inv.basePropList">
+								<ul
+									class="base-prop"
+									:style="{ 
+										'text-shadow': prop && prop.shadow ? '1px 1px 0 ' + prop.shadow : ''
+									}"
+								>
+									<li>{{ prop.text }}</li>
+									<li>{{ prop.value }}</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+
+					<div
+						v-show="inv.show"
+						id="investigation-skill"
+						class="inventory investigation"
+					>
+						<ul class="item-prop-list">
+							<item-symbol :item="inv.obj"></item-symbol>
+							<item-name :item="inv.obj"></item-name>
+						</ul>
+						<p class="description">{{ inv.desc }}</p>
+						<ul class="base-prop-list">
+							<li v-for="prop in inv.basePropList">
+								<ul
+									class="base-prop"
+									:style="{ 
+										'text-shadow': prop && prop.shadow ? '1px 1px 0 ' + prop.shadow : ''
+									}"
+								>
+									<li>{{ prop.text }}</li>
+									<li>{{ prop.value }}</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+
+			<!-- Stats Fixed -->
+			<div id="stats-fixed-container">
+				<div class="stats-fixed-left-container">
+					<div class="stats-fixed-bar">
+						<span 
+							class="hp"
+							v-bind:style="{ 
+								width: (rogue.hp < 0 ? 0 : rogue.hp / rogue.hpMax * 100) + '%',
+								'background-color': (
+									rogue.sleeping ? colorList.royalblue :
+									rogue.paralyzed ? colorList.orange :
+									rogue.confused ? colorList.yellow :
+									rogue.blinded ? colorList.gray :
+									rogue.hallucinated ? colorList.purple :
+									rogue.canceled ? colorList.white :
+									rogue.infected ? colorList.infection :
+									rogue.poisoned ? colorList.poison :
+									''
+								)
+							}"
+						></span>
+					</div>
+					<div class="stats-fixed-box">
+						<ul class="stats-fixed-list-top">
+							<li
+								v-bind:style="{ color: rogue.lvl < rogue.lvlMax ? colorList.yellow : '' }"
+							>{{ (vueList.isEnglish ? 'Level ' : 'レベル ') + rogue.lvl }}</li>
+							<li
+								v-bind:class="{ 
+									buff: rogue.expBuff,
+								}"
+
+								v-bind:style="{
+									color: rogue.exp < rogue.expMax ? colorList.yellow : '',
+								}"
+							>{{ (vueList.isEnglish ? 'Exp ' : '経験値 ') + rogue.exp }}</li>
+							<li>{{ '$ ' + rogue.purse }}</li>
+							<li
+								v-bind:style="{
+									color: rogue.hp <= 0 ? colorList.red : '',
+								}"
+							>{{ 'HP '+ rogue.hp + '/' + rogue.hpMax }}</li>
+						</ul>
+						<ul class="stats-fixed-list-bottom">
+							<li 
+								class="rogue-boxes-list"
+								v-for="(item, key) in rogue.boxes"
+							>
+								<span
+									v-bind:class="{ 
+										'unique-color': item && item.stroke,
+									}"
+
+									v-bind:style="{ 
+										color: item ? item && item.color : '',
+										'text-shadow': item && item.shadow ? '1px 1px 0 ' + item.shadow : ''
+									}"
+								>{{ item ? item.symbol : key }}</span>
+								<span 
+									class="item-num"
+									v-if="item"
+								>{{ item.quantity }}</span>
+								<span 
+									class="item-charge"
+									v-if="item && item.identified && isFinite(item.charges)"
+								>{{ item.charges}}</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="stats-fixed-right-container">
+					<div class="stats-fixed-bar">
+						<span class="mp"
+							v-bind:style="{ 
+								width: (rogue.mp < 0 ? 0 : rogue.mp / rogue.mpMax * 100) + '%'
+							}"
+						></span>
+					</div>
+					<div class="stats-fixed-box">
+						<ul class="stats-fixed-list-top">
+							<li
+								v-bind:style="{
+									color: rogue.mp <= 0 ? colorList.red : '',
+								}"
+							>{{ 'MP '+ rogue.mp + '/' + rogue.mpMax }}</li>
+							<li
+								v-bind:class="{ 
+									sustain: rogue.strSus
+								}"
+
+								v-bind:style="{
+									color: rogue.str < rogue.strMax ? colorList.yellow : '',
+								}"
+							>{{ (vueList.isEnglish ? 'Str ' : '筋 ') + rogue.str }}</li>
+							<li
+								v-bind:class="{ 
+									sustain: rogue.dexSus
+								}"
+
+								v-bind:style="{
+									color: rogue.dex < rogue.dexMax ? colorList.yellow : '',
+								}"
+							>{{ (vueList.isEnglish ? 'Dex ' : '器 ') + rogue.dex }}</li>
+							<li
+								v-bind:class="{ 
+									sustain: rogue.conSus
+								}"
+
+								v-bind:style="{
+									color: rogue.con < rogue.conMax ? colorList.yellow : '',
+								}"
+							>{{ (vueList.isEnglish ? 'Con ' : '耐 ') + rogue.con }}</li>
+							<li
+								v-bind:class="{ 
+									sustain: rogue.intSus
+								}"
+
+								v-bind:style="{
+									color: rogue.int < rogue.intMax ? colorList.yellow : '',
+								}"
+							>{{ (vueList.isEnglish ? 'Int ' : '知 ') + rogue.int }}</li>
+							<li
+								v-bind:class="{ 
+									buff: rogue.speeded
+								}"
+
+								v-bind:style="{
+									color: rogue.slowed ? colorList.red : '',
+								}"
+							>{{ (vueList.isEnglish ? 'Spd ' : '速 ') + rogue.spd }}</li>
+						</ul>
+						<div class="stats-fixed-list-bottom">
+							<span v-if="!rogue.cdl">{{ vueList.isEnglish ? 'Limbo' : '辺獄' }}</span>
+							<span v-else-if="rogue.cdl >= 1 && rogue.cdl <= 33">{{ (vueList.isEnglish ? 'Hell B' : '地獄 地下') + rogue.cdl }}</span>
+							<span v-else-if="rogue.cdl >= 34 && rogue.cdl <= 66">{{ (vueList.isEnglish ? 'Purgatory ' : '煉獄') + (rogue.cdl - 33) }}</span>
+							<span v-else-if="rogue.cdl >= 67 && rogue.cdl <= 99">{{ (vueList.isEnglish ? 'Heaven ' : '天国') + (rogue.cdl - 66) }}</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Game Loader -->
+			<div
+				id="game-loader"
+				class="hide"
+				v-show="flag.title || flag.retry || flag.failed"
+			>
+				<div
+					id="title"
+					class="title"
+					v-show="flag.title || flag.failed"
+				>
+					<p
+						class="err-msg"
+						v-show="flag.failed"
+					>
+						{{ (vueList.isEnglish ?
+                        "Failed to load. In order to delete your save data and continue, please push 'Y'" :
+						"読み込みに失敗しました。セーブデータを消去してゲームを続けるには、'Y'を押してください。")
+						+ ` (data ver ${verData.toFixed(3)})` }}
+					</p>
+					<div class="msg-box">
+						<h1>Death and Birth</h1>
+						<h2>{{ vueList.isEnglish ?
+							'[Enter] to start' :
+							'[Enter] ゲームスタート' }}
+						</h2>
+					</div>
+					<small class="ver">{{ `ver ${ver.toFixed(3)}` }}</small>
+				</div>
+				<div
+					class="retry"
+					v-show="flag.retry"
+				>
+					<div class="msg-box">
+						<h1>G A M E  O V E R</h1>
+						<h2>{{ vueList.isEnglish ?
+							'[Enter] to retry' :
+							'[Enter] リトライ' }}
+						</h2>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+		<!--
 		<article>
-			<button id="command-btn">コマンド一覧</button>
-			<button id="recipe-btn">レシピ一覧</button>
-			<div id="command-container" style="display: none">
+			<button id="site-command-btn">コマンド一覧</button>
+			<button id="site-recipe-btn">レシピ一覧</button>
+			<div id="site-command-container" style="display: none">
 				<ul>
 					<li><span>方向キー</span><span>移動</span></li>
 					<li><span>h</span><span>左移動</span></li>
@@ -76,7 +630,7 @@
 					<li><span>Ctrl+v</span><span>ゲームのバージョン</span></li>
 				</ul>
 			</div>
-			<div id="recipe-container" style="display: none">
+			<div id="site-recipe-container" style="display: none">
 				<ul>
 					<li><span>名称</span><span>MP(毎)</span><span>レシピ</span></li>
 					<li><span>錬金</span><span>5</span><span>ジュエル [1-4] -> 硬貨</span></li>
@@ -149,8 +703,8 @@
 				<li>このゲームのバージョン更新時に、お使いのブラウザで頻繁にエラーが発生する場合、キャッシュやクッキー等のサイトデータを消去すると、解消される場合があります。</li>
 			</ul>
 		</article>
-		<h1>Death and Birth</h1>
 		<article>
+			<h1>Death and Birth</h1>
 			<p>ジャンル:&ensp;PCブラウザゲーム・ローグライク</p>
 			<p>対応ブラウザ:&ensp;<a href="https://www.google.co.jp/chrome" target="_blank">Chrome 最新版</a></p>
 			<p>ソースコード:&ensp;<a href="https://github.com/deathandbirth/deathandbirth.github.io" target="_blank">Github</a></p>
@@ -158,9 +712,15 @@
 			<p>更新内容:&ensp;<a href="https://ringil-blog.info/" target="_blank">Blog</a></p>
 		</article>
 		<small>※ブラウザ読み込み時にタイトル曲を再生しないようにしました。（v0.009）</small>
+	-->
 	</main>
-	<footer><p>(c) Death and Birth 2018</p></footer>
-	<script src="site.js"></script>
+	<!-- <footer><p>(c) Death and Birth 2018</p></footer> -->
+	
+	<!-- <script src="site.js"></script> -->
+
+	<!-- 開発バージョン-->
+	<script src="vendor/js/vue.js"></script>
+
 	<script src="scripts/constants.js"></script>
 	<script src="scripts/color.js"></script>
 	<script src="scripts/display.js"></script>
@@ -192,6 +752,7 @@
 	<script src="scripts/game.js"></script>
 	<script src="scripts/help.js"></script>
 	<script src="scripts/input.js"></script>
+	<script src="scripts/vueFunk.js"></script>
 	<script src="scripts/load.js"></script>
 </body>
 </html>
