--- a/debug.html
+++ b/debug.html
@@ -49,7 +49,7 @@
 
 			<!-- Enemy Bar -->
 			<enemy-bar
-				v-if="barEnemy"
+				v-if="rogue"
 				id="enemy-bar-container"
 				:enemy="barEnemy"
 				:name="barName"
@@ -340,8 +340,12 @@
 	<script src="scripts/dungeon.js"></script>
 	<script src="scripts/town.js"></script>
 	<script src="scripts/inventory.js"></script>
+	<script src="scripts/materialList.js"></script>
+	<script src="scripts/modList.js"></script>
 	<script src="scripts/material.js"></script>
+	<script src="scripts/itemList.js"></script>
 	<script src="scripts/item.js"></script>
+	<script src="scripts/fighterList.js"></script>
 	<script src="scripts/fighter.js"></script>
 	<script src="scripts/rogue.js"></script>
 	<script src="scripts/enemy.js"></script>
@@ -349,7 +353,7 @@
 	<script src="scripts/game.js"></script>
 	<script src="scripts/help.js"></script>
 	<script src="scripts/input.js"></script>
-	<script src="scripts/vueFunk.js"></script>
+	<script src="scripts/vueList.js"></script>
 	<script src="scripts/load.js"></script>
 </body>
 </html>
